--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Welcome to the Loud Librarian Game!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Loud Librarian Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Welcome to the Loud Librarian Game!</h1>
+    <p>Shhh... It's a noisy game in a quiet place.</p>
+    <button onclick="startGame()">Start Game</button>
+    <script src="script.js"></script>
+</body>
+</html>
